--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -147,7 +147,8 @@
             "SUB_TITLE_REWARD": "Dein Inserat ist jetzt öffentlich und deine Teilnahme an unserem Gewinnspiel* ist registriert",
             "REWARD_LEGAL": "* Information zum Gewinnspiel und Teilnahmebedingungen",
             "DISPLAY": "Inserat ansehen",
-            "SHARE": "Inserat teilen"
+            "SHARE": "Inserat teilen",
+            "APPOINTMENTS": "Deine Verfügbarkeiten bestimmen"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "Besuch",
