--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -147,7 +147,8 @@
             "SUB_TITLE_REWARD": "Il tuo annuncio è stato pubblicato e parteciperai al nostro concorso*",
             "REWARD_LEGAL": "* Dettagli del concorso e condizioni di partecipazione",
             "DISPLAY": "Dai un'occhiata al tuo annuncio",
-            "SHARE": "Condividi l'annuncio"
+            "SHARE": "Condividi l'annuncio",
+            "APPOINTMENTS": "Imposta la tua disponibilità"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "Partecipazione",
