feat(#2): new design for viewings requests

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -680,6 +680,11 @@
                 "HIGHLIGHT": "ein Zeitfenster,",
                 "END": "um einen Termin zu bekommen"
             }
+        },
+        "BUTTONS": {
+            "ADD": "Hinzufügen",
+            "LOCK": "Beschäftigt",
+            "REJECTED": "Abgelehnt"
         }
     },
     "MY_APPOINTMENTS": {
