--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -680,6 +680,11 @@
                 "HIGHLIGHT": "a time slot",
                 "END": "to get a viewing"
             }
+        },
+        "BUTTONS": {
+            "ADD": "Add",
+            "LOCK": "Busy",
+            "REJECTED": "Rejected"
         }
     },
     "MY_APPOINTMENTS": {
