--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -680,6 +680,11 @@
                 "HIGHLIGHT": "une proposition",
                 "END": "de créneau horaire afin d'obtenir un rendez-vous"
             }
+        },
+        "BUTTONS": {
+            "ADD": "Ajouter",
+            "LOCK": "Occupé",
+            "REJECTED": "Refusé"
         }
     },
     "MY_APPOINTMENTS": {
