feat(#2): update design admin appointments

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -684,7 +684,8 @@
         "BUTTONS": {
             "ADD": "Add",
             "LOCK": "Busy",
-            "REJECTED": "Rejected"
+            "REJECTED": "Rejected",
+            "AVAILABLE": "Available"
         }
     },
     "MY_APPOINTMENTS": {
