--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -684,7 +684,8 @@
         "BUTTONS": {
             "ADD": "Ajouter",
             "LOCK": "Occupé",
-            "REJECTED": "Refusé"
+            "REJECTED": "Refusé",
+            "AVAILABLE": "Disponible"
         }
     },
     "MY_APPOINTMENTS": {
