--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -684,7 +684,8 @@
         "BUTTONS": {
             "ADD": "Aggiunger",
             "LOCK": "Occupato/a",
-            "REJECTED": "Rifiutato"
+            "REJECTED": "Rifiutato",
+            "AVAILABLE": "Disponibile"
         }
     },
     "MY_APPOINTMENTS": {
