--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -684,7 +684,8 @@
         "BUTTONS": {
             "ADD": "Hinzufügen",
             "LOCK": "Beschäftigt",
-            "REJECTED": "Abgelehnt"
+            "REJECTED": "Abgelehnt",
+            "AVAILABLE": "Verfügbar"
         }
     },
     "MY_APPOINTMENTS": {
