ux: german language improvement

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -141,7 +141,7 @@
             "REWARD_LEGAL": "* Information zum Gewinnspiel und Teilnahmebedingungen",
             "DISPLAY": "Inserat ansehen",
             "SHARE": "Inserat teilen",
-            "APPOINTMENTS": "Deine Verfügbarkeiten bestimmen"
+            "APPOINTMENTS": "Trage deine Verfügbarkeit ein"
         },
         "STEP_ATTENDANCE": {
             "TITLE": "Besuch",
