feat(#9): wording on the first slide

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,7 +3,7 @@
         "FACEBOOK_LOGIN": "Se connecter avec Facebook",
         "GOOGLE_LOGIN": "Se connecter avec Google",
         "SLIDES": {
-            "SLIDE1": "Découvre des <strong>colocs</strong> et <strong>colocataires</strong> sans prise de tête",
+            "SLIDE1": "Découvre des <strong>colocataires</strong> et <strong>colocs</strong> sans prise de tête",
             "SLIDE2": "Jette un oeil sur les <strong>centres d’intérêt</strong> des colocs",
             "SLIDE3": "Découvre les <strong>incontournables</strong> des <strong>quartiers</strong>",
             "SLIDE4": "<strong>Gagne du temps</strong>, pas de blabla, envoie des demandes de rdv instantanées"
