feat(#9): revert wording as previously, ordering was better before

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,7 +3,7 @@
         "FACEBOOK_LOGIN": "Mit Facebook anmelden",
         "GOOGLE_LOGIN": "Mit Google anmelden",
         "SLIDES": {
-            "SLIDE1": "Entdecke <strong>Mitbewohner</strong> und coole <strong>WG</strong>",
+            "SLIDE1": "Entdecke coole <strong>WG</strong> und <strong>Mitbewohner</strong>",
             "SLIDE2": "Finde heraus, welche <strong>Interessen</strong> die <strong>Mitbewohner</strong> haben",
             "SLIDE3": "Entdecke die <strong>Highlights</strong> der <strong>Umgebung</strong>",
             "SLIDE4": "<strong>Spare Zeit</strong> durch sofortige Besichtigungsanfragen"
