--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
         "FACEBOOK_LOGIN": "Sign in with Facebook",
         "GOOGLE_LOGIN": "Sign in with Google",
         "SLIDES": {
-            "SLIDE1": "Discover <strong>roommates</strong> and <strong>flatshares</strong>",
+            "SLIDE1": "Discover <strong>flatshares</strong> and <strong>roommates</strong>",
             "SLIDE2": "Find out the <strong>interests</strong> of the roommates",
             "SLIDE3": "Discover the <strong>highlights</strong> of the <strong>area</strong>",
             "SLIDE4": "<strong>Save time</strong>, send instant viewings’ requests"
