--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -3,7 +3,7 @@
         "FACEBOOK_LOGIN": "Accedi con Facebook",
         "GOOGLE_LOGIN": "Accedi con Google",
         "SLIDES": {
-            "SLIDE1": "Trova <strong>coinquilini</strong> e <strong>camere</strong>",
+            "SLIDE1": "Trova <strong>camere</strong> e <strong>coinquilini</strong>",
             "SLIDE2": "Scopri gli <strong>interessi</strong> dei coinquilini",
             "SLIDE3": "Scopri i <strong>punti forti della zona</strong>",
             "SLIDE4": "<strong>Risparmia tempo</strong> e richiedi una visita subito"
