feat: wording shorter

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,7 +6,7 @@
             "SLIDE1": "Découvre des <strong>colocs</strong> sans prise de tête",
             "SLIDE2": "Jette un oeil sur les <strong>centres d’intérêt</strong> des colocs",
             "SLIDE3": "Découvre les <strong>incontournables</strong> des <strong>quartiers</strong>",
-            "SLIDE4": "<strong>Gagne du temps</strong>, pas de blabla, envoie des demandes de rdv instantanées"
+            "SLIDE4": "<strong>Gagne du temps</strong>, envoie des demandes de rdv instantanées"
         },
         "LEGAL": "En m'identifiant j'accepte les",
         "LEGAL_LINK": "termes et conditions"
