feat(#25): add a new page to limit the visibility of the ad

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -43,7 +43,8 @@
             "UNDO": "wieder herstellen",
             "EDIT_APPOINTMENTS": "Meine Verfügbarkeiten verwalten",
             "EDIT_ADS": "Mein Inserat verwalten",
-            "CLOSE": "Mein Inserat löschen"
+            "CLOSE": "Mein Inserat löschen",
+            "LIMIT_ADS": "Wer kann mein Inserat sehen?"
         }
     },
     "NEW_AD": {
