--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -43,7 +43,8 @@
             "UNDO": "Ripristina",
             "EDIT_APPOINTMENTS": "Gestisci la mia disponibilità",
             "EDIT_ADS": "Gestisci il mio annuncio",
-            "CLOSE": "Elimina il mio annuncio"
+            "CLOSE": "Elimina il mio annuncio",
+            "LIMIT_ADS": "Chi può vedere il mio annuncio?"
         }
     },
     "NEW_AD": {
