--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -146,7 +146,7 @@
             "APPOINTMENTS": "Fixer tes disponibilités"
         },
         "STEP_ATTENDANCE": {
-            "TITLE": "Fréquentation",
+            "TITLE": "Une dernière info avant la publication",
             "SUB_TITLE": "Plusieurs personnes peuvent-elles participer à la même visite?",
             "SINGLE": "Une seule personne par visite",
             "MULTIPLE": "Plusieurs personnes, portes ouvertes"
