--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -146,7 +146,7 @@
             "APPOINTMENTS": "Imposta la tua disponibilità"
         },
         "STEP_ATTENDANCE": {
-            "TITLE": "Partecipazione",
+            "TITLE": "Un'ultima informazione prima pubblicazione",
             "SUB_TITLE": "Più persone possono partecipare allo stesso appuntamento?",
             "SINGLE": "Solo una persona per visita",
             "MULTIPLE": "Più persone, porte aperte"
