--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -113,7 +113,8 @@
             "KIDS_WELCOMED": "Avec enfants bienvenus"
         },
         "STEP_PHOTO": {
-            "ADD_PHOTO": "Ajouter une photo",
+            "ADD_PHOTO_SHARE": "Ajoute une photo de ta colocation",
+            "ADD_PHOTO_FLAT": "Ajoute une photo de ton appartement",
             "FROM_GALLERY": "Sélectionner à partir d'un album",
             "FROM_CAMERA": "Prendre une photo",
             "AT_LEAST_ONE_PHOTO_FLAT": "Ajoute au moins une photo de ton appartement pour rendre ton annonce attrayante",
