feat: spelling mistake

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -113,8 +113,8 @@
             "KIDS_WELCOMED": "Kindern willkommen"
         },
         "STEP_PHOTO": {
-            "ADD_PHOTO_SHARE": "Foto von deine WG hinzufügen",
-            "ADD_PHOTO_FLAT": "Foto von deine Wohnung hinzufügen",
+            "ADD_PHOTO_SHARE": "Foto von deiner WG hinzufügen",
+            "ADD_PHOTO_FLAT": "Foto von deiner Wohnung hinzufügen",
             "FROM_GALLERY": "Aus Album wählen",
             "FROM_CAMERA": "Foto aufnehmen",
             "AT_LEAST_ONE_PHOTO_FLAT": "Bitte füge mindestens ein Foto deiner Wohnung hinzu, um dein Gesuch interessanter zu machen",
